--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -3,12 +3,14 @@ anyio==4.8.0
 asn1crypto==1.5.1
 base58==2.1.1
 bip-utils==2.9.3
+bip32utils==0.3.post4
 cbor2==5.6.5
 certifi==2024.12.14
 cffi==1.17.1
 click==8.1.8
 coincurve==20.0.0
 crcmod==1.7
+Deprecated==1.2.18
 dnspython==2.7.0
 ecdsa==0.19.0
 ed25519-blake2b==1.4.1
@@ -21,10 +23,12 @@ httptools==0.6.4
 httpx==0.28.1
 idna==3.10
 Jinja2==3.1.5
+limits==4.0.1
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 mnemonic==0.21
+packaging==24.2
 py-sr25519-bindings==0.2.1
 pycparser==2.22
 pycryptodome==3.21.0
@@ -47,3 +51,4 @@ uvicorn==0.34.0
 uvloop==0.21.0
 watchfiles==1.0.4
 websockets==14.2
+wrapt==1.17.2
