--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -4,9 +4,11 @@ asn1crypto==1.5.1
 base58==2.1.1
 bip-utils==2.9.3
 bip32utils==0.3.post4
+bip85==0.2.0
 cbor2==5.6.5
 certifi==2024.12.14
 cffi==1.17.1
+charset-normalizer==3.4.1
 click==8.1.8
 coincurve==20.0.0
 crcmod==1.7
@@ -22,23 +24,29 @@ httpcore==1.0.7
 httptools==0.6.4
 httpx==0.28.1
 idna==3.10
-Jinja2==3.1.5
+ipaddress==1.0.23
+Jinja2==3.1.6
 limits==4.0.1
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 mnemonic==0.21
+monero==1.1.1
 packaging==24.2
 py-sr25519-bindings==0.2.1
+pycoin==0.92.20241201
 pycparser==2.22
 pycryptodome==3.21.0
+pycryptodomex==3.21.0
 pydantic==2.10.6
 pydantic_core==2.27.2
 Pygments==2.19.1
 PyNaCl==1.5.0
+PySocks==1.7.1
 python-dotenv==1.0.1
 python-multipart==0.0.20
 PyYAML==6.0.2
+requests==2.32.3
 rich==13.9.4
 rich-toolkit==0.13.2
 shellingham==1.5.4
@@ -47,8 +55,10 @@ sniffio==1.3.1
 starlette==0.45.3
 typer==0.15.1
 typing_extensions==4.12.2
+urllib3==2.3.0
 uvicorn==0.34.0
 uvloop==0.21.0
+varint==1.0.2
 watchfiles==1.0.4
 websockets==14.2
 wrapt==1.17.2
