added make it generate 100 addresses incrementing the  derivation_path

--- a/rust_scripts/bitcoin_address_generator/Cargo.toml
+++ b/rust_scripts/bitcoin_address_generator/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bip39 = "2.0.0"
-bip32 = "0.5.1"
-bitcoin = "0.29.2"
-hex = "0.4.3"
-k256 = "0.13.3"
+bip39 = "2.0"
+bip32 = "0.5"
+bitcoin = "0.31"
+hex = "0.4"
+k256 = { version = "0.13", features = ["ecdsa"] }
